Added docker packaging

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,11 +1,11 @@
 mqtt:
-  host: 192.168.1.203 # mqtt host/server
+  host: _REPLACE_ # mqtt host/server like 192.168.1.203
   port: 1883 # mqtt host/server port
 
 telegram:
-  chat_id: <your_chat_id> # your telegram chat id
-  api_token: <your_bot_api_token> # your telegram bot api token
+  chat_id: _REPLACE_ # your telegram chat id
+  api_token: _REPLACE_ # your telegram bot api token
 
 frigate:
-  host: 192.168.1.4 # frigate host/server
+  host: _REPLACE_ # frigate host/server like 192.168.1.4
   port: 5001 # frigate host/server port
