--- a/build-docker-compose.yaml
+++ b/build-docker-compose.yaml
@@ -1,5 +1,5 @@
 # Notes: Run this docker compose file if you want to build image yourself
-#   sudo docker compose up -d --build --force-recreate
+#   sudo docker compose -f build-docker-compose.yaml up -d --build --force-recreate
 
 version: '3.9'
 
