--- a/config.yaml.example
+++ b/config.yaml.example
@@ -4,6 +4,7 @@ mqtt:
 
 telegram:
   chat_id: _REPLACE_ # your telegram chat id
+  thread: _REPLACE_  # Message Topic/Thread
   api_token: _REPLACE_ # your telegram bot api token
   max_snapshot_size_mb: 10 # this is telegram limits https://core.telegram.org/bots/api#sendphoto
   max_clip_size_mb: 50 # this is telegram limits https://core.telegram.org/bots/api#sendvideo
